--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,7 +50,9 @@ footer {
   @media(max-width:700px){ .traits input{width:60px} .bubble{max-width:95%} header{flex-wrap:wrap} }
 
 .menu-btn {
-  float: right;
+  position: absolute;
+  right: 0;
+  top: 2px;
   background: none;
   border: none;
   font-size: 16px;
